# gplasso

./: LICENSE  README.md  pyproject.toml
docs/: Derivatives of isotropic functions.ipynb
gplasso/: .gitignore  api.py  barrier_solver.py  base.py  data_split_inference.py  discrete.py  fit_gplasso.py  general_inference.py  gridded.py  grouped.py  jacobian.py  jax_kernels.py  kernel_calcs.py  kernels.py  optimization_problem.py  path.py  peaks.py  taylor_expansion.py  utils.py
gplasso/jax/: kernels.py  optimization_problem.py
sandbox/: inference.py  randomized_inference.py
tests/: test_2dim.py  test_2dim_gs.py  test_2dim_gs_nonnull.py  test_2dim_svd.py  test_3dim.py  test_3dim_penalty_barrier.py  test_blah.py  test_data_split.py  test_decompose.py  test_gaussian_kernel.py  test_group_lasso.py  test_inference.py  test_jax_kernel.py  test_lasso.py  test_lasso_misspec.py  test_optimization_problem.py  test_problem.py  test_randomized_inference.py  test_regression_decomposition.py  test_taylor_expansion.py
