[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gplasso"
version = "0.0.1"
authors = [
  { name="Jonathan Taylor", email="jonathan.taylor@stanford.edu" },
]
description = "A process for Gaussian process LASSO"
readme = "README.md"
requires-python = ">=3.7"
requires = ["scikit-learn", "numpy", "scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonathan-taylor/gplasso"
"Bug Tracker" = "https://github.com/jonathan-taylor/gplasso/issues"